# rustykube

./: .gitignore  Cargo.toml  README.md  main.rs  sample.yml  utils.rs
commands/: analyze.rs  fix.rs  lint.rs  mod.rs  optimize.rs  validate.rs
lint_rules/: health_checks.rs  image_tagging.rs  missing_labels.rs  mod.rs  resource_limits.rs  security.rs
samples/: deployment.yaml  sample.yml  service.yaml  test-manifest.yaml
src/: main.rs
