[package]
name = "rustykube"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

[[bin]]
name = "rustykube"  # Name of the binary
path = "main.rs"    # Path to the main file
